--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,45 @@
     <title>Página Principal | Série | Recriando Wekipedia</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
-        </div>
-    </div>
+    <header>
+        <picture class="logo">
+            <img src="assets/images/logo.png" width="200" />
+        </picture>
+    </header>
 
     <div class="bar"></div>
 
-    <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
+    <section class="content">
+        <aside class="sidebar">
+            <h2>Série</h2>
             <ul>
                 <li><a href="#">Links</a></li>
             </ul>
-        </div>
+        </aside>
 
-        <div class="main">
-            
-        </div>
+        <main class="main">
+            <h1>Tudo sobre a série</h1>
+            <h2>Sinopse</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto architecto exercitationem quos magnam nostrum odit dolor, eos eligendi consectetur, a iste animi minima neque ipsa ipsum repellendus quae itaque qui!</p>
+        </main>
 
-        <div class="anchors">
+        <nav class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
                 <li><a href="#">Âncoras</a></li>
+                <li><a href="#">Âncoras</a></li>
+                <li><a href="#">Âncoras</a></li>
+                <li><a href="#">Âncoras</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </section>
 
-    <div class="footer">
+    <footer class="footer">
 
-    </div>
+    </footer>
 </body>
+
 </html>
