--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <picture class="logo">
-            <img src="assets/images/logo.png" width="200" />
+            <img src="assets/images/logo.png.png" width="200" />
         </picture>
     </header>
 
