Atualiza links e css

--- a/clube-da-luta.html
+++ b/clube-da-luta.html
@@ -13,7 +13,8 @@
 
     <header>
         <picture class="logo">
-            <img src="assets/images/logo.png.png" width="200" />
+            <img src="assets/images/logo.png.png" width="200"
+                alt="logotipo com um globo cinza com dois círculos, cinza e azul. Escrito WiChryspédia abaixo." />
         </picture>
     </header>
 
@@ -49,6 +50,11 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
+            <br>
+            <br>
+
+            <a href="#clube" id="topo">Topo da Página</a>
+
 
             <h2 id="elenco">Elenco</h2>
             <ul>
@@ -63,12 +69,16 @@
                 <li><b>Peter Iacangelo</b> como Lou</li>
             </ul>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h2 id="poster">Pôster</h2>
             <figure>
-                <img src="assets/images/fight_club.jpg" width="250" alt="">
+                <img src="assets/images/fight_club.jpg" width="250"
+                    alt="Pôster do filme em inglês. Na parte superior, um sabonete rosa escrito 'Fight Club' e na parte inferior estão as fotos de Edward Norton e Brad Pitt.">
                 <figcaption>Pôster do Filme </figcaption>
             </figure>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h2 id="producao">Produção</h2>
 
             <h3 id="desenvolvimento">Desenvolvimento</h3>
@@ -79,7 +89,9 @@
                 respectivamente. Fincher, apesar de suas reservas iniciais devido a experiências passadas com a 20th
                 Century Fox, foi confirmado como diretor da adaptação cinematográfica de "Fight Club" em agosto de 1997.
             </p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h3 id="escolha">Escolha do Elenco</h3>
             <p>O produtor Ross Bell inicialmente considerou Russell Crowe para o papel de Tyler Durden em "Fight Club",
                 mas o produtor sênior Art Linson optou por Brad Pitt, que assinou com o estúdio por um cachê de US$ 17,5
@@ -90,7 +102,9 @@
                 treinamento intensivo e preparação para seus papéis. A escolha de Fincher para o papel de Marla Singer
                 foi Helena Bonham Carter, apesar das considerações iniciais de Janeane Garofalo, Courtney Love e Winona
                 Ryder.</p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h3 id="filmagens">Filmagens</h3>
             <p>A produção de "Fight Club" começou com um orçamento de US$ 23 milhões, que logo aumentou para US$ 50
                 milhões e, eventualmente, para US$ 67 milhões durante as filmagens. Apesar das tentativas do produtor
@@ -101,7 +115,9 @@
                 ocorreram em Los Angeles e em cenários construídos no estúdio da Fox. A produção incluiu trezentas
                 cenas, duzentas locações e efeitos especiais complexos, levando Fincher a comparar "Fight Club" com seu
                 filme subsequente, "Panic Room", devido à logística envolvida.</p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h3 id="trilha">Trilha Sonora</h3>
             <p>David Fincher estava preocupado que bandas com experiência em escrever trilhas sonoras fossem incapazes
                 de unir os temas, então ele procurou uma banda que nunca havia gravado para cinema. Ele contatou o grupo
@@ -112,7 +128,9 @@
                 abrir novos caminhos com tudo sobre o filme e uma trilha sonora não tradicional ajudou a conseguir
                 isso". O clímax e os créditos finais do filme apresentam a música "Where Is My Mind?" da banda de rock
                 alternativo Pixies.</p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h2 id="lancamento">Lançamento e Recepção</h2>
             <h3 id="marketing">Marketing</h3>
             <p>Após a conclusão das filmagens de "Fight Club" em dezembro de 1998, o diretor David Fincher preparou o
@@ -123,7 +141,9 @@
                 em Brad Pitt. Apesar dos esforços de Fincher para contratar a empresa de publicidade Wieden+Kennedy e
                 criar uma campanha de marketing inovadora, a Fox optou por uma campanha mais tradicional, que muitos
                 acreditam ter contribuído para o desempenho morno do filme nas bilheterias dos Estados Unidos.</p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
             <h3 id="desempenho">Desempenho Comercial</h3>
             <p>A 20th Century Fox realizou a estreia mundial de Fight Club no 56º Festival Internacional de Cinema de
                 Veneza em 10 de setembro de 1999. Para o lançamento nos cinemas estadunidenses, o estúdio contratou o
@@ -140,7 +160,11 @@
                 filme na América do Norte azedou o relacionamento entre o chefe do estúdio da 20th Century Fox, Bill
                 Mechanic, e o executivo de mídia Rupert Murdoch, o que contribuiu para a renúncia de Mechanic da Fox em
                 junho de 2000.</p>
+            <br>
 
+            <a href="#clube" id="topo">Topo da Página</a>
+            <br>
+            <br>
 
         </main>
 
@@ -164,8 +188,8 @@
     </div>
 
     <footer class="footer">
-        <p>Desenvolvido por Chrys Penalber para projeto da Formação HTML da DIO</p>
-        <p>CSS por Diogo Mainardes</p>
+        <p>| Desenvolvido por Chrys Penalber para projeto da Formação HTML da DIO</p>
+        <p>| CSS por Diogo Mainardes</p>
 
     </footer>
 </body>
