Atualiza página hercules

--- a/rei-do-show.html
+++ b/rei-do-show.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clube da Luta | WiChryspédia</title>
+    <title>Hércules | WiChryspédia</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -32,67 +32,92 @@
         </aside>
 
         <main class="main">
-            <h1 id="clube">Clube da Luta</h1>
+            <h1 id="topo">Hércules</h1>
 
-            <p>"Clube da Luta" é um filme norte-americano de 1999, dirigido por David Fincher e baseado no romance
-                homônimo de Chuck Palahniuk. Protagonizado por Brad Pitt, Edward Norton e Helena Bonham Carter, o filme
-                retrata a história de um homem descontente com seu trabalho de classe média que forma um clube de
-                combate com o vendedor de sabonetes Tyler Durden. Apesar de não ter atingido as expectativas iniciais de
-                bilheteria e ter recebido críticas polarizadas, principalmente devido à sua violência, o filme ganhou
-                status de cult após o lançamento do DVD e é agora considerado um dos filmes mais influentes de todos os
-                tempos. Em 2013, Palahniuk anunciou uma continuação do romance em formato de graphic novel, embora não
-                haja rumores de uma adaptação cinematográfica.
+            <p>"Hércules" é um filme de animação musical de fantasia norte-americano, o trigésimo-quinto da Walt Disney
+                Feature Animation. Lançado em 27 de junho de 1997, o filme é inspirado no mito grego de Herácles, mais
+                conhecido como Hércules, filho de Zeus. Apesar de ter recebido críticas medianas a positivas,
+                especialmente para a atuação de James Woods como Hades, o filme teve um desempenho modesto em sua
+                estreia, lucrando US$ 252,7 milhões nas bilheterias mundiais. "Hércules" foi seguido por uma prequela em
+                vídeo, "Hercules: Zero to Hero", que serviu como piloto para a série de TV "Hercules: The Animated
+                Series".
             </p>
 
             <h2 id="trailer">Trailer</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BdJKm16Co6M?si=OV781vK0hcXqbHwO"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nL67qqiFAtc?si=OrHB2aNjOjUUCxzT"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#topo" id="link-topo">Topo da Página</a>
 
 
             <h2 id="elenco">Elenco</h2>
             <ul>
-                <li><b>Edward Norton</b> como Narrador</li>
-                <li><b>Brad Pitt</b> como Tyler Durden</li>
-                <li><b>Helena Bonham Carter</b> como Marla Singer</li>
-                <li><b>Meat Loaf</b> como Robert 'Bob' Paulsen</li>
-                <li><b>Zach Grenier</b> como Richard Chesler - O chefe</li>
-                <li><b>Rachel Singer</b> como Chloe</li>
-                <li><b>Eion Bailey</b> como Ricky</li>
-                <li><b>Jared Leto</b> como Angel Face</li>
-                <li><b>Peter Iacangelo</b> como Lou</li>
+                <li><b>Tate Donovan</b> como Hércules</li>
+                <li><b>Danny DeVito</b> como Filoctetes</li>
+                <li><b>James Woods</b> como Hades</li>
+                <li><b>Susan Egan</b> como Mégara</li>
+                <li><b>Bobcat Goldthwait</b> como Agonia</li>
+                <li><b>Matt Frewer</b> como Pânico</li>
+                <li><b>Rip Torn</b> como Zeus</li>
+                <li><b>Samantha Eggar</b> como Hera</li>
+                <li><b>Barbara Barrie</b> como Alcmena</li>
+                <li><b>Hal Holbrook</b> como Anfitrião</li>
+                <li><b>Paul Shaffer</b> como Hermes</li>
+                <li><b>Charlton Heston</b> como Narrador</li>
+                <li><b>Vanéese Y. Thomas</b> como Clio</li>
+                <li><b>Lillias White</b> como Calíope</li>
             </ul>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#topo" id="link-topo">Topo da Página</a>
             <h2 id="poster">Pôster</h2>
             <figure>
-                <img src="assets/images/fight_club.jpg" width="250"
-                    alt="Pôster do filme em inglês. Na parte superior, um sabonete rosa escrito 'Fight Club' e na parte inferior estão as fotos de Edward Norton e Brad Pitt.">
+                <img src="assets/images/hercules.jpg" width="250"
+                    alt="Pôster do filme em inglês. Um grande raio amarelo, Hercules escrito com letras gregas e abaixo escrito 1997 em números romanos e 'strikes this summer'.">
                 <figcaption>Pôster do Filme </figcaption>
             </figure>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#topo" id="link-topo">Topo da Página</a>
             <h2 id="producao">Produção</h2>
 
-            <h3 id="desenvolvimento">Desenvolvimento</h3>
-            <p>"Fight Club", o aclamado romance de Chuck Palahniuk, foi publicado em 1996 e rapidamente chamou a atenção
-                da Fox Searchlight Pictures. Apesar de inicialmente rejeitado para adaptação cinematográfica, os
-                produtores Josh Donen e Ross Bell viram potencial na obra e adquiriram os direitos por dez mil dólares.
-                A busca por um roteirista e diretor adequados levou à contratação de Jim Uhls e David Fincher,
-                respectivamente. Fincher, apesar de suas reservas iniciais devido a experiências passadas com a 20th
-                Century Fox, foi confirmado como diretor da adaptação cinematográfica de "Fight Club" em agosto de 1997.
+            <h3 id="trilha">Trilha Sonora</h3>
+            <p>Hércules Em Português: Uma Trilha Sonora Original de Walt Disney Records foi lançada no Brasil em 1997
+                pela Velas e Walt Disney Records. Contém duas versões da canção "Go the Distance" interpretada por
+                Ricky Martin, sendo uma em espanhol e outra em português.
+
+                A versão brasileira de "I Won't Say (I'm in Love)" (Não Direi) presente na trilha sonora foi
+                interpretada por Kika Tristão. A cantora foi premiada como a melhor cantora dubladora da América Latina
+                pela Disney, sendo a primeira vez que o Brasil recebe o prêmio.
+
+                Todas as letras escritas por David Zippel, versão em português por Marcelo Coutinho e Renato Rosenberg,
+                todas as músicas compostas por Alan Menken.
             </p>
+            <h4>Canções</h4>
+
+            <ol>
+                <li><b>"Faz Tempo"</b> - Ênio Santos</li>
+                <li><b>"O Que Passou I"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
+
+                <li><b>"Vencer Distâncias"</b> - Marcus Menna</li>
+                <li><b>"Minha Chance"</b> - Mauro Ramos</li>
+                <li><b>"De Zero a Herói"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
+                <li><b>"Não Direi"</b> - Kika Tristão, Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso
+                </li>
+                <li><b>"Brilhou no Céu"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara
+                    Sasso</li>
+                <li><b>"Já Não Há Distância"</b> - Ricky Martin</li>
+                <li><b>"Brilhou no Céu"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
+                <li><b>"No Importa La Distancia"</b> - Ricky Martin</li>
+            </ol>
+
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
-            <h3 id="escolha">Escolha do Elenco</h3>
+            <a href="#topo" id="link-topo">Topo da Página</a>
+            <h3 id="premios">Prêmios e Indicações</h3>
             <p>O produtor Ross Bell inicialmente considerou Russell Crowe para o papel de Tyler Durden em "Fight Club",
                 mas o produtor sênior Art Linson optou por Brad Pitt, que assinou com o estúdio por um cachê de US$ 17,5
                 milhões. Para o papel do narrador sem nome, o diretor David Fincher escolheu Edward Norton, apesar do
@@ -104,7 +129,7 @@
                 Ryder.</p>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#topo" id="link-topo">Topo da Página</a>
             <h3 id="filmagens">Filmagens</h3>
             <p>A produção de "Fight Club" começou com um orçamento de US$ 23 milhões, que logo aumentou para US$ 50
                 milhões e, eventualmente, para US$ 67 milhões durante as filmagens. Apesar das tentativas do produtor
@@ -117,7 +142,7 @@
                 filme subsequente, "Panic Room", devido à logística envolvida.</p>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#topo" id="link-topo">Topo da Página</a>
             <h3 id="trilha">Trilha Sonora</h3>
             <p>David Fincher estava preocupado que bandas com experiência em escrever trilhas sonoras fossem incapazes
                 de unir os temas, então ele procurou uma banda que nunca havia gravado para cinema. Ele contatou o grupo
@@ -130,7 +155,7 @@
                 alternativo Pixies.</p>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#clube" id="link-topo">Topo da Página</a>
             <h2 id="lancamento">Lançamento e Recepção</h2>
             <h3 id="marketing">Marketing</h3>
             <p>Após a conclusão das filmagens de "Fight Club" em dezembro de 1998, o diretor David Fincher preparou o
@@ -143,7 +168,7 @@
                 acreditam ter contribuído para o desempenho morno do filme nas bilheterias dos Estados Unidos.</p>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#clube" id="link-topo">Topo da Página</a>
             <h3 id="desempenho">Desempenho Comercial</h3>
             <p>A 20th Century Fox realizou a estreia mundial de Fight Club no 56º Festival Internacional de Cinema de
                 Veneza em 10 de setembro de 1999. Para o lançamento nos cinemas estadunidenses, o estúdio contratou o
@@ -162,7 +187,7 @@
                 junho de 2000.</p>
             <br>
 
-            <a href="#clube" id="topo">Topo da Página</a>
+            <a href="#clube" id="link-topo">Topo da Página</a>
             <br>
             <br>
 
